# action-semantic-versioning

./: .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  action.yml  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: main.yml  pr-title-check.yml  pre-commit.yaml
scripts/: update_version.py
