[project]
name = "action-semantic-versioning"
version = "0.0.1"
description = "A short description of your project."
readme = "README.md"
requires-python = ">=3.10"
keywords = [ "example", "pre-commit", "python",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]

[project.license]
text = "MIT"

[tool.pylint."MESSAGES CONTROL"]
disable = [ "C0114", "C0115", "C0116", "R0903", "W0511", "E0401",]

[tool.pylint.BASIC]
max-line-length = 120

[tool.pylint.FORMAT]
indent-string = "    "
